--- a/docs/modules/ROOT/pages/buildings/modularpower/MP-Generators.adoc
+++ b/docs/modules/ROOT/pages/buildings/modularpower/MP-Generators.adoc
@@ -20,7 +20,10 @@ TDB
 
 
 ### Efficiency notice:
-These machines will not produce power if run outside optimal RPM limits, see the above "RPM Sweetspots" table.
+These machines will not produce specification power if run outside optimal RPM limits, see the above "RPM Sweetspots" table.
+
+For instance, the MV generator will not produce specification power if the RPM exceeds ~3200 or falls below 3100 based on version 2.1.7 hardware. Running a MV generator at 5000 RPM will produce no power at all.
+
 
 ## Variants:
 ### LV
