--- a/docs/modules/ROOT/pages/buildings/reactors/Arc-Reactor.adoc
+++ b/docs/modules/ROOT/pages/buildings/reactors/Arc-Reactor.adoc
@@ -8,5 +8,8 @@ Once shutdown has started it cannot be switched back on until it is fully switch
 Reactor will consume 0.25 Cores per minute at 100% utilization, and 5m^3 of coolant per minute at max capacity.
 
 ## Building Cost:
+40 Supercomputers, 80 Alclad Aluminum Sheet, 60 A.I. Limiter
+
+## Building Unlock Tier: Tier 7
 
 image::https://github.com/mrhid6/sf_mod_refinedpower/raw/master/Images/ArcReactor.png[]
