--- a/docs/modules/ROOT/pages/buildings/windturbines/Wind-Turbine-Mk2.adoc
+++ b/docs/modules/ROOT/pages/buildings/windturbines/Wind-Turbine-Mk2.adoc
@@ -2,9 +2,9 @@
 
 ## Building Information
 
-Can Generate 75MW. If more than 1 turbine is in its range it will produce less. Maxes out at 4 turbines and generates no power at all. Mk2 wind turbine is renewable power for your factory that needs no input of items.
+Generates 100MW.
 
-Can be daisy-chained up to 2 power lines.
+The minimum radius for no proximity overlap reduction is 51m. Every turbine within this range will reduce production by 25%.
 
 ## Building Cost
 
